--- a/oral-history/index.html
+++ b/oral-history/index.html
@@ -7,7 +7,7 @@
   <!-- none of this displays directly in the web page.  -->
   <head>
     <meta charset="UTF-8" />
-    <title> John F. Kennedy Moon Shot Speech | by Adam Nangini </title>
+    <title> John F. Kennedy Innagural Speech | by Adam Nangini </title>
     <!-- load some big magic scripts  -->
     <!-- jQuery is an important framework used by many web projects  -->
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
@@ -52,7 +52,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"> John F. Kennedy Moon Shot Speech | by Adam Nangini </a> <!-- should be descriptive -->
+          <a class="navbar-brand" href="#"> John F. Kennedy Inagural Speech| by Adam Nangini </a> <!-- should be descriptive -->
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
