--- a/oral-history/index.html
+++ b/oral-history/index.html
@@ -67,7 +67,7 @@
           <!-- this is our audio element.  It holds the audio file. -->
           <audio id="media" controls="controls">
             <!-- Make sure this points to the actual mp3 file you are analyzing -->
-            <source src="https://storycorpsorg-staging.s3.amazonaws.com/uploads/walsh2-1.mp3"
+            <source src="https://redirector.googlevideo.com/videoplayback?dur=213.855&source=youtube&pl=53&ei=R1axWr6IJZCJ0wWqvpDIDg&id=o-AGRikkmAECZFYVH4CO3_Z3vsIhUTZ2yOxWqfmEsEu0jA&ms=au%2Crdu&mt=1521571300&mv=m&fvip=6&mm=31%2C29&signature=6C2D0BFA6DE6184349B0139E465CDEF4583C58EA.7FC54C7E544E3B78B368985308171A75D8A0A1C5&mn=sn-ab5szne7%2Csn-p5qs7n7z&itag=18&key=yt6&ip=2001%3A19f0%3A7402%3A95%3A5400%3Aff%3Afe6a%3Ad50a&lmt=1393146751319061&initcwndbps=718750&c=WEB&expire=1521592999&ratebypass=yes&ipbits=0&clen=9295490&requiressl=yes&mime=video%2Fmp4&gir=yes&sparams=clen%2Cdur%2Cei%2Cgir%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cexpire"
                     type="audio/mp3" />
           </audio>
 
