link broke for no reason

--- a/oral-history/index.html
+++ b/oral-history/index.html
@@ -67,7 +67,7 @@
           <!-- this is our audio element.  It holds the audio file. -->
           <audio id="media" controls="controls">
             <!-- Make sure this points to the actual mp3 file you are analyzing -->
-            <source src="https://redirector.googlevideo.com/videoplayback?dur=213.855&source=youtube&pl=53&ei=R1axWr6IJZCJ0wWqvpDIDg&id=o-AGRikkmAECZFYVH4CO3_Z3vsIhUTZ2yOxWqfmEsEu0jA&ms=au%2Crdu&mt=1521571300&mv=m&fvip=6&mm=31%2C29&signature=6C2D0BFA6DE6184349B0139E465CDEF4583C58EA.7FC54C7E544E3B78B368985308171A75D8A0A1C5&mn=sn-ab5szne7%2Csn-p5qs7n7z&itag=18&key=yt6&ip=2001%3A19f0%3A7402%3A95%3A5400%3Aff%3Afe6a%3Ad50a&lmt=1393146751319061&initcwndbps=718750&c=WEB&expire=1521592999&ratebypass=yes&ipbits=0&clen=9295490&requiressl=yes&mime=video%2Fmp4&gir=yes&sparams=clen%2Cdur%2Cei%2Cgir%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cexpire"
+            <source src="https://redirector.googlevideo.com/videoplayback?mime=video%2Fmp4&requiressl=yes&clen=9295490&mn=sn-a5mlrnes%2Csn-a5meknes&mm=31%2C29&key=yt6&mv=m&mt=1521595011&ms=au%2Crdu&source=youtube&signature=1B4B470D7BAC24A9D47F32E2B19F18A3FBEEB0DF.46AF456169E2805C3D92B072DF88D1BC3B589BBF&ipbits=0&itag=18&ratebypass=yes&gir=yes&c=WEB&pl=64&expire=1521616736&dur=213.855&ip=2400%3A8902%3A%3Af03c%3A91ff%3Afe2d%3Ab374&beids=%5B9466593%5D&sparams=clen%2Cdur%2Cei%2Cgir%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cexpire&initcwndbps=1451250&ei=ALOxWtTuBYP94QK72JmwDQ&id=o-AJf-Qn0VTOfs9dNe-aUKyGGaZgdh2sD8GHoW842ynT2S&lmt=1393146751319061&fvip=3"
                     type="audio/mp3" />
           </audio>
 
