--- a/oral-history/index.html
+++ b/oral-history/index.html
@@ -67,7 +67,7 @@
           <!-- this is our audio element.  It holds the audio file. -->
           <audio id="media" controls="controls">
             <!-- Make sure this points to the actual mp3 file you are analyzing -->
-            <source src="/Users/adamnangini/Documents/GitHub/advanced-topics-Adam1T9/oral-history/RobertMcNamara.mp3"
+            <source src="./RobertMcNamara.mp3"
                     type="audio/mp3" />
           </audio>
 
